--- a/.github/workflows/plant-png.yaml
+++ b/.github/workflows/plant-png.yaml
@@ -13,6 +13,6 @@ jobs:
         uses: frederikheld/render-plantuml-to-wiki-action@v1.0.1
         with:
           WIKI_TOKEN: ${{ secrets.WIKI_TOKEN }}
-          INPUT_DIR: ''
+          INPUT_DIR: 'uml'
           OUTPUT_DIR: 'plantumls'
 
